crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__union_type_complex_arg.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun complex(x: Int | [Num]? | Text | Null?): Null",
    "x: Int | [Num]? | Text | Null?",
]
