crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__union_type_function_arg-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
assertion_line: 2915
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [],
}
