crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__union_type_function_arg.snap
---
source: crates/server/tests/analysis/alpha060.rs
assertion_line: 2910
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun process(x: Int | Text): Null",
    "x: Int | Text",
]
