crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__union_type_function_return-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Union types are not supported for function return type",
            18..28,
        ),
    ],
}
