crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__unused_import.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.unused_diagnostics
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Unused import \"unused_helper\"",
            18..31,
        ),
    ],
}
