crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__unused_import_star.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.unused_diagnostics
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Unused import",
            1..22,
        ),
    ],
    (
        FileId(
            1,
        ),
        FileVersion(
            1,
        ),
    ): [],
}
