crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__unused_variable_shadowing.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.unused_diagnostics
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Unused variable \"a\"",
            5..6,
        ),
        (
            "Unused variable \"a\"",
            22..23,
        ),
    ],
}
